Fully integrate DU-Tweaks into Settings
This helps us avoid any permissions type of issues that we had before and
makes for a better experience for the user.

Change-Id: I96bdde0616f369dce5b4447086d478b739ba125d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3271,5 +3271,21 @@
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+        <!-- Start of our manifest entries -->
+
+        <!-- DU-Tweaks -->
+        <activity android:name=".Settings$DirtyTweaksActivity"
+                  android:label="@string/dirtytweaks_title"
+                  android:icon="@drawable/ic_settings_dirtytweaks">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.dirtyunicorns.tweaks.DirtyTweaks"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/dirtytweaks_summary"/>
+        </activity>
+
     </application>
 </manifest>
