Launch DU Themes from Settings
Change-Id: I3cdcca0e352a92a8ddb60d021a79811e105d487e

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3289,5 +3289,20 @@
                        android:resource="@string/dirtytweaks_summary"/>
         </activity>
 
+       <!-- DU Themes -->
+       <activity android:name="Settings$StartThemesActivity"
+            android:label="@string/du_themes_title"
+            android:icon="@drawable/ic_homepage_du_themes"
+            android:taskAffinity="com.android.settings"
+            android:parentActivityName="Settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.StartThemes" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/du_themes_summary"/>
+        </activity>
+
     </application>
 </manifest>
