Changelog: integrate it into Settings/About phone
Change-Id: I154f8b399ec19d56dac5cbc62534edaf3309771a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3304,5 +3304,12 @@
                        android:resource="@string/du_themes_summary"/>
         </activity>
 
+       <!-- DU Changelog -->
+        <activity android:name="com.dirtyunicorns.changelog.MainActivity"
+                  android:taskAffinity=""
+                  android:parentActivityName="Settings"
+                  android:theme="@style/ChangelogTheme"
+                  android:label="@string/du_changelog_title" />
+
     </application>
 </manifest>
